# AIC_car_2025

./: .gitignore  MIGRATION_REPORT_CN.md  Makefile  README.md  cmd.txt  frames_2025-10-12_20.10.55.gv  run.sh  test.sh
.github/workflows/: rust.yml
car_bringup/: CMakeLists.txt  MIGRATION_SUMMARY.md  README.md  package.xml  setup.py
car_bringup/car_bringup/: newt.py  odo.py  pubv.py
car_bringup/include/bringup/: base.h
car_bringup/launch/: gmapping.launch  gmapping.launch.py
car_bringup/param/: car_params.yaml  laser.yaml  robot_localization.yaml
car_bringup/scripts/: newt.py  odo.py  pubv.py
car_bringup/src/: .base.cpp.swp  base.cpp  base_node.cpp
navi_rs/: Cargo.toml  package.xml
navi_rs/src/: main.rs  navi.rs  vision.rs
navi_rs/tests/: integration_test.rs  test_navigation.sh
robot_gazebo/: CMakeLists.txt  cmd.txt  package.xml
robot_gazebo/config/: ros2_config.yaml
robot_gazebo/launch/: robot.launch.py  test.py
robot_gazebo/models/aic_cp/: model.sdf
robot_gazebo/models/aic_plane/: model.sdf
robot_gazebo/models/aic_plane/materials/scripts/: asphalt.material
robot_gazebo/models/aic_ro1/: model.sdf
robot_gazebo/models/aic_ro2/: model.sdf
robot_gazebo/plugin/: odom_plugin.cpp
robot_gazebo/urdf/: cylinder_inertial_matrix.urdf.xacro  mecanum_controllers.yaml  move.urdf.xacro  my_base.urdf.xacro  my_camera.urdf.xacro  my_laser.urdf.xacro  robot.urdf  robot.urdf.xacro
robot_gazebo/worlds/: empty.world
robot_real/: package.xml  setup.cfg  setup.py
robot_real/launch/: all.launch.py  simple_goal.launch.py  slam.launch.py  tools.launch.py  vision.launch.py
robot_real/scripts/: __init__.py  main.py
ros2_tools/: CMakeLists.txt  package.xml
ros2_tools/launch/: real_robot.launch.py  tools.launch.py  tools_gazebo.launch.py  tools_real.launch.py
ros2_tools/src/: bsp_node.cpp  camera_node.cpp  d435_node.cpp  ground_camera_node.cpp  hardware_bridge_node.cpp  lidar_data_node.cpp  pwm.py  topic_to_gazebo.cpp  topic_to_gazebo.hpp
ros2_tools/srv/: GarbageClassify.srv  OCR.srv  SERVO.srv  YOLO.srv
tts/: package.xml  setup.py
tts/tts/: .gitignore  tts_node.py
vision_node/: CHANGELOG.md  README.md  package.xml  requirements.txt  setup.py  test_vision_node.py
vision_node/ocr/: .gitignore  __init__.py  paddleocr.py
vision_node/ocr/inference_results/: system_results.txt
vision_node/ocr/model/blue/det/infer/: inference.pdiparams  inference.pdiparams.info  inference.pdmodel
vision_node/ocr/model/blue/rec/infer/: inference.pdiparams.info  inference.pdmodel
vision_node/ocr/model/green/det/infer/: inference.pdiparams  inference.pdiparams.info  inference.pdmodel
vision_node/ocr/model/green/rec/infer/: inference.pdiparams.info
vision_node/ocr/tools/infer/: __init__.py  utility.py
vision_node/take_photo/: camera.py  fenbianlv.py  photo.py  test.py  video.py
vision_node/test/: test_green_model.py  test_paddleocr_simple.py
vision_node/vision_node/: config.py  node.py  vision_gazebo.py  vision_real.py
vision_node/yolo/: test2.py  test2_new.py  test3.py
yolip/: package.xml  setup.py
yolip/yolip/: .gitignore  clip_test.py
yolip/yolip/scripts/: clip.py  list_cn.yaml  main.py  utils.py  yolo.py
