<package format="3">
  <name>navi_rs</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="fermata@h2o.moe">fermata</maintainer>
  <license>GPL-3.0-or-later</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>