<?xml version="1.0"?>
<package format="3">
  <name>robot_gazebo</name>
  <version>0.0.0</version>
  <description>URDF simulation package for Gazebo</description>
  <maintainer email="2271612727@qq.com">Hiromichi123</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
