<?xml version="1.0"?>
<package format="3">
  <name>robot_real</name>
  <version>1.0.0</version>
  <description>robot_real start</description>
  <maintainer email="2271612727@qq.com">Hiromichi123</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rclpy</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
