<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tts</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2271612727@qq.com">jetson</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ros2_tools</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
